force-app/main/default/objects/payDetail__c/payDetail__c.object-meta.xml
<CustomObject>
    <label>报销明细</label>
    <nameField>
        <label>报销明细名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>