force-app/main/default/objects/payDetail__c/fields/costClass__c.field-meta.xml
<CustomField>
    <fullName>costClass__c</fullName>
    <description>费用类别</description>
    <label>费用类别</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>交通费</fullName>
                <default>true</default>
                <label>交通费</label>
            </value>
            <value>
                <fullName>餐费</fullName>
            </value>
            <value>
                <fullName>住宿费</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>