force-app/main/default/objects/payDetail__c/fields/explain__c.field-meta.xml
<CustomField>
    <fullName>explain__c</fullName>
    <description>补充说明</description>
    <inlineHelpText>补充说明</inlineHelpText>
    <label>补充说明</label>
    <type>TextArea</type>
</CustomField>