force-app/main/default/objects/payDetail__c/fields/firstplace__c.field-meta.xml
<CustomField>
    <fullName>firstplace__c</fullName>
    <label>出发地</label>
    <length>20</length>
    <type>Text</type>
</CustomField>