force-app/main/default/objects/payDetail__c/fields/lastplace__c.field-meta.xml
<CustomField>
    <fullName>lastplace__c</fullName>
    <description>目的地</description>
    <inlineHelpText>目的地</inlineHelpText>
    <label>目的地</label>
    <length>20</length>
    <type>Text</type>
</CustomField>