force-app/main/default/objects/payDetail__c/fields/payCount__c.field-meta.xml
<CustomField>
    <fullName>payCount__c</fullName>
    <description>报销费用</description>
    <inlineHelpText>报销费用</inlineHelpText>
    <label>报销费用</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>