force-app/main/default/objects/payDetail__c/fields/payRecord__c.field-meta.xml
<CustomField>
    <fullName>payRecord__c</fullName>
    <label>报销记录</label>
    <referenceTo>payRecord__c</referenceTo>
    <relationshipLabel>报销明细</relationshipLabel>
    <relationshipName>payRecord</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>