force-app/main/default/objects/payDetail__c/fields/payTime__c.field-meta.xml
<CustomField>
    <fullName>payTime__c</fullName>
    <description>消费日期</description>
    <inlineHelpText>消费日期</inlineHelpText>
    <label>消费日期</label>
    <type>Date</type>
</CustomField>