force-app/main/default/objects/payDetail__c/fields/subPayClass__c.field-meta.xml
<CustomField>
    <fullName>subPayClass__c</fullName>
    <label>子费用类别</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>costClass__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>火车</fullName>
            </value>
            <value>
                <fullName>飞机</fullName>
            </value>
            <value>
                <fullName>汽车</fullName>
            </value>
            <value>
                <fullName>轮船</fullName>
            </value>
            <value>
                <fullName>请客户吃饭</fullName>
            </value>
            <value>
                <fullName>公司团建</fullName>
            </value>
            <value>
                <fullName>加班餐</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>