force-app/main/default/objects/payDetail__c/validationRules/isHotel3.validationRule-meta.xml
<ValidationRule>
    <fullName>isHotel3</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(costClass__c)==&apos;住宿费&apos; &amp;&amp; ISBLANK( explain__c )</errorConditionFormula>
    <errorMessage>选择住宿费时解释说明必填</errorMessage>
</ValidationRule>