force-app/main/default/objects/payDetail__c/validationRules/isTraffic.validationRule-meta.xml
<ValidationRule>
    <fullName>isTraffic</fullName>
    <active>true</active>
    <description>是否是交通</description>
    <errorConditionFormula>TEXT( costClass__c )==&apos;交通费&apos; &amp;&amp; ISBLANK(firstplace__c) &amp;&amp; ISBLANK( lastplace__c )</errorConditionFormula>
    <errorMessage>输入交通费时，出发地和目的地必填</errorMessage>
</ValidationRule>